<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:layout_gravity="bottom"
    tools:context="com.example.android.courtcounter.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mybg"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_title_margin"
            android:layout_marginBottom="@dimen/app_title_margin"
            android:background="@color/colorPrimary"
            android:padding="@dimen/app_title_padding"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/app_title_text_size"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/teamAView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >



                <TextView
                    android:id="@+id/teamAText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/team_name_text_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transParent"
                    android:layout_marginStart="@dimen/team_icon_margin"
                    android:layout_marginEnd="@dimen/team_icon_margin"
                    android:src="@drawable/teamants"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/team_score_text_size"/>

                <Button
                    android:id="@+id/teamAScore3Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_layout_margin"
                    android:onClick="add3Points4TeamA"
                    android:text="@string/button_text_three_points"/>


                <Button
                    android:id="@+id/teamAScore2Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_layout_margin"
                    android:onClick="add2Points4TeamA"
                    android:text="@string/button_text_two_points"/>


                <Button
                    android:id="@+id/teamAScoreFreeThrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_layout_margin"
                    android:onClick="add1Point4TeamA"
                    android:text="@string/button_text_one_point"/>



            </LinearLayout>

            <View
                android:layout_width="@dimen/team_scores_divider_size"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
            />

            <LinearLayout
                android:id="@+id/teamBView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/teamBText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/team_b_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/team_name_text_size"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transParent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/team_icon_margin"
                    android:layout_marginEnd="@dimen/team_icon_margin"
                    android:src="@drawable/teambugs"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/team_score_text_size"/>

                <Button
                    android:id="@+id/teamBScore3Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_layout_margin"
                    android:onClick="add3Points4TeamB"
                    android:text="@string/button_text_three_points"/>


                <Button
                    android:id="@+id/teamBScore2Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_layout_margin"
                    android:onClick="add2Points4TeamB"
                    android:text="@string/button_text_two_points"/>


                <Button
                    android:id="@+id/teamBScoreFreeThrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_layout_margin"
                    android:onClick="add1Point4TeamB"
                    android:text="@string/button_text_one_point"/>

            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="resetGame"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="RESET"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
